2004-08-20  Chad Fowler  <chad@chadfowler.com>
	
	* lib/rubygems/specification.rb: Fixed small bug in the previous spec
	change commit.

	* lib/rubygems/cache.rb: Prevent catastrophic failure if a gemspec is 
	corrupted.

	* lib/rubygems/installer.rb: Fixed (in not a great way) a bug that would
	cause a zero-length spec file to be written to the gem specifications
	directory.

2004-08-19  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/specification.rb: #files auto-includes any #extensions,
	#extra_rdoc_files, #test_files, etc. that weren't explicitly added
	to the file list.

2004-08-18  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/specification.rb: One more bug with #test_files.
	Default value of [] wasn't set, resulting in an attempt to call
	#empty? on nil.

	* lib/rubygems/gem_commands.rb: Unit tests appear to be working now.
	Still more testing to do.

	* lib/rubygems/remote_installer.rb, lib/rubygems/installer.rb: Fixed
	minor bugs in default selections for questions asked during 
	installation and uninstallation
 
2004-08-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/specification.rb:
	  - #test_suite_file and #test_files now work on older gems.
	  - Added Specification.from_yaml for loading YAML gemspecs
	  - #to_ruby doesn't emit 'specification_version'

	* lib/rubygems/gem_commands.rb: Updated test-on-install code to use
	  Specification#test_files instead of #unit_test_suite.

	* lib/rubygems/old_format.rb: Use Specification.from_yaml
	* lib/rubygems/package.rb:    Ditto

2004-08-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/command.rb: --debug option to turn on $DEBUG
	* lib/rubygems/config_file.rb: ditto

2004-08-11  Rich Kilmer <rich@infoether.com>
        * lib/rubygems/installer.rb: The application stub now defaults to 
          the latest version of the library, and optionally allows an initial 
          parameter conforming to _VERSION_ to be passed to select a prior 